<resources>
    <string name="app_name">SnapChat Clone</string>

    <!-- Botoes -->
    <string name="hint_button_login">Entrar</string>
    <string name="hint_create_account">Criar Conta</string>
    <string name="hint_next">Próximo</string>
    <string name="hint_load">Carregando...</string>


    <!-- Hints -->
    <string name="hint_login">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_password_confirm">Confirmar Senha</string>
    <string name="hint_name">Nome</string>
    <string name="hint_snaps_empty">Você ainda não nenhum snap :(</string>


    <!-- Activitys-->
    <string name="title_snaps">Snaps</string>
    <string name="title_photos">Photos</string>
    <!--<string name="title_photos">Photos</string>-->


</resources>
